Update CMake files
This include better CMake files that include RED4ext as a CMake project directly, add more explanation about some options and remove source globbing from the main project.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,25 +3,26 @@ cmake_minimum_required(VERSION 3.12)
 # Change the project name here!
 project(RED4ext.Example.CMake LANGUAGES CXX)
 
-# Properties.
+# Set this option to ON to be able to use folders / filters in your project when using Visual Studio.
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
-# Variables.
+# Set the C++ standard to 20 (C++20).
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED YES)
 
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/libs")
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
+# Add RED4ext.SDK as a dependency.
 
-foreach(configuration ${CMAKE_CONFIGURATION_TYPES})
-    string(TOLOWER ${configuration} configuration_lower)
-    string(TOUPPER ${configuration} configuration_upper)
+# Uncomment the following line if you want to use the header-only version of RED4ext.SDK.
+#option(RED4EXT_HEADER_ONLY "" ON)
 
-    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${configuration_upper} "${CMAKE_BINARY_DIR}/${configuration_lower}/libs")
-    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${configuration_upper} "${CMAKE_BINARY_DIR}/${configuration_lower}/bin")
-endforeach()
+add_subdirectory(deps/red4ext.sdk)
+set_target_properties(RED4ext.SDK PROPERTIES FOLDER "Dependencies")
 
-add_definitions(-D_CRT_SECURE_NO_WARNINGS)
-include_directories("deps/red4ext.sdk/include")
+# This will mark the following RED4ext variables as advanced. They won't be displayed in CMake's GUI.
+mark_as_advanced(
+  RED4EXT_BUILD_EXAMPLES
+  RED4EXT_HEADER_ONLY
+)
 
+# Include the main project.
 add_subdirectory(src)
