--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,16 @@
 add_library(${CMAKE_PROJECT_NAME} SHARED "")
 
-file(GLOB_RECURSE HEADERS *.hpp)
-file(GLOB_RECURSE SOURCES *.cpp)
+set(PROJECT_HEADER_FILES
+  # Add the header files here.
+)
 
-source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${HEADERS} ${SOURCES})
+set(PROJECT_SRC_FILES
+  Main.cpp
+)
+
+source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${PROJECT_HEADER_FILES} ${PROJECT_SRC_FILES})
 
 target_include_directories(${CMAKE_PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_sources(${CMAKE_PROJECT_NAME} PRIVATE ${HEADERS} ${SOURCES})
+target_sources(${CMAKE_PROJECT_NAME} PRIVATE ${PROJECT_HEADER_FILES} ${PROJECT_SRC_FILES})
+
+target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE RED4ext::SDK)
